Prevent image stretching in flexbox

--- a/style.scss
+++ b/style.scss
@@ -36,6 +36,7 @@ body {
 }
 
 .profile {
+    align-self: center;
     height: 5rem;
     width: 5rem;
     margin-right: 1rem;
